feat: add Biome configuration and dependencies
Add `biome.json` configuration file and include the Biome package in `devDependencies`. This introduces code formatting, linting, and import organization capabilities through Biome.

(This commit message was AI-generated.)

Signed-off-by: Jens Oliver Meiert <jens@meiert.com>

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@playwright/test": "^1.49.0",
     "@remix-run/dev": "^2.14.0",
     "@testing-library/dom": "^10.4.0",
