feat: add biome linting script to package.json
Added a new linting script "biome" to package.json using @biomejs/biome. This helps to ensure code quality and consistency by automatically fixing linting issues.

(This commit message was AI-generated.)

Signed-off-by: Jens Oliver Meiert <jens@meiert.com>

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest",
     "test:e2e": "playwright test",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "biome": "npx @biomejs/biome lint --write ."
   },
   "dependencies": {
     "@remix-run/node": "^2.14.0",
