--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test:e2e": "playwright test",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "biome": "npx @biomejs/biome lint --write ."
+    "biome": "npx @biomejs/biome lint --write .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@remix-run/node": "^2.14.0",
@@ -43,6 +45,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.2.0",
     "jsdom": "^25.0.1",
     "msw": "^2.6.5",
     "postcss": "^8.4.49",
