--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "jens@meiert.com"
+          git config --global user.name "Jens Oliver Meiert"
+
       - name: Deploy to GitHub Pages
         run: npm run deploy
         env:
