--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: npm run build
 
       - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         run: npm run deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
