fix: update predeploy script in package.json
Updated the predeploy script from "npm run build" to "remix vite:build". This ensures the correct build process using Remix and Vite for the deployment phase.

(This commit message was AI-generated.)

Signed-off-by: Jens Oliver Meiert <jens@meiert.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "biome": "npx @biomejs/biome lint --write .",
-    "predeploy": "npm run build",
+    "predeploy": "remix vite:build",
     "deploy": "gh-pages -d build/client"
   },
   "dependencies": {
