--- a/package.json
+++ b/package.json
@@ -1,23 +1,4 @@
 {
-  "name": "test-remix",
-  "private": true,
-  "sideEffects": false,
-  "type": "module",
-  "homepage": "https://j9t.github.io/test-remix/",
-  "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev --port 3000",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc",
-    "test": "vitest",
-    "test:e2e": "playwright test",
-    "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui",
-    "biome": "npx @biomejs/biome lint --write .",
-    "predeploy": "remix vite:build",
-    "deploy": "gh-pages -d build/client"
-  },
   "dependencies": {
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
@@ -58,5 +39,24 @@
   },
   "engines": {
     "node": ">=20.0.0"
-  }
+  },
+  "homepage": "https://j9t.github.io/test-remix/",
+  "name": "test-remix",
+  "private": true,
+  "scripts": {
+    "biome": "npx @biomejs/biome lint --write .",
+    "build": "remix vite:build",
+    "deploy": "gh-pages -d build/client",
+    "dev": "remix vite:dev --port 3000",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "predeploy": "remix vite:build",
+    "start": "remix-serve ./build/server/index.js",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:ui": "vitest --ui",
+    "typecheck": "tsc"
+  },
+  "sideEffects": false,
+  "type": "module"
 }
